// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin/articles form 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "loading": true,
        "method": "get",
        "params": Object {
          "limit": 500,
        },
        "url": "/api/admin/article-categories",
      },
    ],
    Array [
      Object {
        "loading": true,
        "method": "get",
        "url": "/api/admin/articles/defaults",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;

exports[`admin/articles form 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "loading": true,
        "method": "get",
        "params": Object {
          "limit": 500,
        },
        "url": "/api/admin/article-categories",
      },
    ],
    Array [
      Object {
        "loading": true,
        "method": "get",
        "url": "/api/admin/articles/defaults",
      },
    ],
    Array [
      Object {
        "data": Object {
          "author": undefined,
          "categoryId": 1,
          "cover": undefined,
          "detail": Object {
            "content": undefined,
          },
          "intro": undefined,
          "redirectLink": undefined,
          "sort": 50,
          "sourceLink": undefined,
          "title": "测试标题",
        },
        "loading": true,
        "method": "POST",
        "url": "/api/admin/articles",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;
